# mpc_mqtt

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  acados_sim_solver_pendulum_ode.c  acados_sim_solver_pendulum_ode.h  acados_solver.pxd  acados_solver_pendulum_ode.c  acados_solver_pendulum_ode.h  acados_solver_sfunction_pendulum_ode.c  bazel-bin  bazel-out  bazel-pendulum_example  bazel-testlogs  bazel_to_cmake.py  main_communicate.cpp  main_communication_system.py  main_pendulum_ode.c  main_sim_pendulum_ode.c  make_sfun_pendulum_ode.m  ocp.cpp  pendulum_mpc_test.cpp
acados/: BUILD.bazel
acados_c/: BUILD.bazel
blasfeo/include/: BUILD.bazel
hpipm/include/: BUILD.bazel  hpipm_d_dense_qp.h  hpipm_d_dense_qp_res.h  hpipm_d_dense_qp_sol.h  hpipm_d_ocp_qp.h  hpipm_d_ocp_qp_res.h  hpipm_d_ocp_qp_sol.h
include/: ocp.h  pendulum_mpc_test.hpp
lib/: BUILD.bazel
osqp/: BUILD.bazel  auxil.h  cs.h  lin_alg.h  osqp.h  polish.h  types.h  util.h
pendulum_ode_model/: BUILD.bazel  pendulum_ode_model.h
qdldl/: BUILD.bazel
test/: BUILD.bazel
